--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#C26E1B</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="text_color_grey">#767676</color>
+    <color name="radio_btn">#646E4B</color>
+    <color name="payment_btn_color">#ed9732</color>
+    <color name="appy_btn">#F2F2F2</color>
 </resources>
