--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,12 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:clickable">true</item>
         <item name="android:paddingTop">10dp</item>
-        </style>
+    </style>
 
+    <style name="radioButton">
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">18dp</item>
+    </style>
 
 </resources>
