--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -97,7 +97,7 @@
             android:textSize="12sp"
             android:text="+" />
     </LinearLayout>
-    <view
+    <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
