--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="radio_btn">#646E4B</color>
     <color name="payment_btn_color">#ed9732</color>
     <color name="appy_btn">#F2F2F2</color>
+
+    <color name="fontColor">#767676</color>
+    <color name="secondHeader">#EE962F</color>
+    <color name="firstHeader">#C26E1B</color>
+    <color name="confirm">#1795BD</color>
+    <color name="dinner">#20BCD8</color>
+    <color name="white">#fff</color>
 </resources>
