--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,5 +37,13 @@
         <item name="android:textColor">#000</item>
         <item name="android:textSize">18dp</item>
     </style>
+    <style name="delivery">
 
+        <item name="android:textColor">@android:color/black</item>
+
+        <item name="android:paddingLeft">5dp</item>
+
+        <item name="android:textSize">16sp</item>
+
+    </style>
 </resources>
