--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:id="@+id/price_summary"
-    android:text="@string/price_summary"
-    android:textColor="@color/fontColor"
-    android:textSize="18sp"
-    android:textStyle="bold"
-    android:padding="5dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:id="@+id/price_summary"
+        android:text="@string/price_summary"
+        android:textColor="@color/fontColor"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:padding="5dp"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -104,6 +104,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/item_summery_list"
         android:background="@drawable/payment_background"
         android:layout_below="@+id/item_summary"></ListView>
 </RelativeLayout>
