--- a/app/src/main/res/layout/activity_confiramtion.xml
+++ b/app/src/main/res/layout/activity_confiramtion.xml
@@ -1,37 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="2">
-<TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:id="@+id/tv_confiramtion_msg"
-    android:layout_marginBottom="10dp"
-    android:padding="5dp"
-     />
-    <TextView
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="2">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/titel_nas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_order_Summery"
-        android:text="@string/order_summary"
-        android:padding="5dp"
-        style="@style/delivery"
-        android:layout_below="@+id/tv_confiramtion_msg"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-       />
-    <include layout="@layout/booking_history_activity"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="176dp"
-        android:layout_width="match_parent" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <include
-        layout="@layout/bill_details"
-        android:layout_height="449dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_order_Summery" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/tv_confiramtion_msg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:padding="5dp"
+                android:text="Thanks you,we have received your order."
+                android:textColor="@android:color/holo_green_dark"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_order_Summery"
+                style="@style/delivery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_confiramtion_msg"
+                android:text="@string/order_summary"
+                android:textStyle="bold"
+                android:textColor="@color/fontColor" />
+
+            <include
+                layout="@layout/booking_history_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
+
+            <include
+                layout="@layout/bill_details"
+                android:layout_height="449dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_order_Summery" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
+
