--- a/app/src/main/res/layout/payment_type.xml
+++ b/app/src/main/res/layout/payment_type.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_payment_method"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:padding="5dp"
         android:layout_below="@+id/linearLayout1"
         android:layout_marginBottom="5dp"
-        android:text="@string/payment_method" />
+        android:padding="5dp"
+        android:text="@string/payment_method"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
@@ -56,11 +58,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
 
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/radioGroup"
         android:layout_gravity="center"
-        android:layout_marginBottom="2dp"
+        android:layout_marginTop="39dp"
         android:background="@drawable/button_background"
         android:gravity="center"
         android:text="@string/make_payment"
