--- a/app/src/main/res/layout/content_payment.xml
+++ b/app/src/main/res/layout/content_payment.xml
@@ -2,13 +2,12 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:text="Price Summary"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -18,7 +17,6 @@
             android:layout_width="match_parent"
             android:layout_below="@+id/textView"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:orientation="vertical"
             android:background="@drawable/rounded_corner">
 
@@ -115,6 +113,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:gravity="left"
+                    android:textColor="@android:color/holo_red_dark"
                     android:text="\u20ac 577.00"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -163,9 +162,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/paym_details"
-            android:layout_marginLeft="20dp"
             android:text="Payment Method"
             android:textSize="24sp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             android:textStyle="bold"/>
         <LinearLayout
@@ -173,8 +172,6 @@
             android:layout_width="match_parent"
             android:layout_below="@+id/tv_payment_method"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:orientation="vertical"
             android:background="@drawable/rounded_corner">
             <RadioGroup
@@ -203,7 +200,7 @@
                 <RadioButton
                     android:id="@+id/rb_no"
                     style="@style/radioButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
@@ -221,15 +218,12 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-
-            android:layout_below="@+id/tv_change_address"
             android:background="@color/payment_btn_color"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            android:layout_margin="20dp"
-
-
-            android:text="Make Payment" />
+            android:text="Make Payment"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
