--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -1,110 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:id="@+id/price_summary"
-        android:text="@string/price_summary"
-        android:textColor="@color/fontColor"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:padding="5dp"/>
-    <RelativeLayout
+    android:orientation="vertical">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbAR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/relative_layout"
-        android:padding="5dp"
-        android:background="@drawable/payment_background"
-        android:layout_below="@+id/price_summary">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_items"
-            android:textColor="@color/fontColor"
-            android:textSize="15sp"
-            android:layout_marginBottom="3dp"
-            android:text="@string/items"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_chargrss"
-            android:textColor="@color/fontColor"
-            android:layout_marginBottom="10dp"
-            android:layout_below="@+id/tv_items"
-            android:textSize="15sp"
-            android:text="@string/charges" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_estimated"
-            android:layout_below="@+id/tv_chargrss"
-            android:textColor="@color/fontColor"
-            android:layout_marginBottom="10dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:text="@string/estimated_total" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_items_price"
-            android:textColor="@color/fontColor"
-            android:textSize="15sp"
-            android:layout_marginBottom="3dp"
-            android:text="$200"
-            android:layout_alignParentEnd="true"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_charger_price"
-            android:textColor="@color/fontColor"
-            android:layout_below="@+id/tv_items_price"
-            android:textSize="15sp"
-            android:layout_marginBottom="10dp"
-            android:layout_alignParentEnd="true"
-            android:text="$200"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_estimated_price"
-            android:textColor="@color/fontColor"
-            android:layout_below="@+id/tv_charger_price"
-            android:textSize="15sp"
-            android:layout_alignParentEnd="true"
-            android:text="$200"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/button_background"
-            android:text="@string/proceed"
-            android:layout_marginTop="15dp"
-            android:textColor="@android:color/white"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:layout_marginBottom="5dp"
-            android:layout_below="@+id/tv_estimated_price"/>
-    </RelativeLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@+id/relative_layout"
-        android:textSize="18sp"
-        android:textColor="@color/fontColor"
-        android:padding="5dp"
-        android:gravity="bottom"
-        android:id="@+id/item_summary"
-        android:textStyle="bold"
-        android:text="@string/item_summary"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="390dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <ListView
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/item_summery_list"
-        android:background="@drawable/payment_background"
-        android:layout_below="@+id/item_summary"></ListView>
+        android:layout_below="@+id/appbAR"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/price_summary"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:padding="5dp"
+
+            android:text="@string/price_summary"
+            android:textColor="@color/fontColor"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:id="@+id/relative_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/price_summary"
+            android:background="@drawable/payment_background"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/tv_items"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:text="@string/items"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_chargrss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_items"
+                android:layout_marginBottom="10dp"
+                android:text="@string/charges"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_estimated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_chargrss"
+                android:layout_marginBottom="10dp"
+                android:text="@string/estimated_total"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_items_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="3dp"
+                android:text="$200"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_charger_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/tv_items_price"
+                android:layout_marginBottom="10dp"
+                android:text="$200"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_estimated_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/tv_charger_price"
+                android:text="$200"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/tv_estimated_price"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/button_background"
+                android:gravity="center"
+                android:text="@string/proceed"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/item_summary"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/relative_layout"
+            android:gravity="bottom"
+            android:padding="5dp"
+            android:text="@string/item_summary"
+            android:textColor="@color/fontColor"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ListView
+            android:id="@+id/item_summery_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/item_summary"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/payment_background"
+            android:padding="5dp" />
+    </RelativeLayout>
 </RelativeLayout>
