--- a/app/src/main/res/layout/book_a_table.xml
+++ b/app/src/main/res/layout/book_a_table.xml
@@ -1,177 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
-    <TextView
+    >
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbAR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Table"
-        android:textColor="@color/fontColor"
-        android:textSize="18sp"
-        />
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="390dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="10dp"
+        android:layout_margin="5dp"
+        android:layout_below="@+id/appbAR"
+        android:background="@drawable/payment_background">
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="16dp"
-            android:text="Select table no:" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView4"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/textView4"
-            android:layout_below="@+id/textView4"
-            android:layout_marginTop="20dp"
-            android:text="Select date" />
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textView4"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_toEndOf="@+id/textView4"
-            android:layout_toRightOf="@+id/textView4" />
-
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/spinner"
-            android:layout_alignStart="@+id/spinner"
-            android:layout_alignTop="@+id/textView5" />
-
-        <TextView
-            android:id="@+id/tv_search"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_below="@+id/spinner2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="38dp"
-            android:background="@drawable/apply_background"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:text="Enter table no:"
+           android:gravity="left|center_vertical"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/et_table_no"
+            android:layout_toStartOf="@+id/et_table_no" />
+
+
+        <EditText
+            android:id="@+id/et_table_no"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:hint="99"
+            android:inputType="number"
+            android:maxLength="5"
+            android:textColor="@color/fontColor"
+            android:background="@drawable/payment_background"
             android:gravity="center"
-            android:layout_marginBottom="15dp"
-            android:text="Search"
-            android:textAlignment="center" />
+            >
+            <requestFocus/>
+        </EditText>
+
+
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_marginTop="25dp"
+
+    <Button
+        android:id="@+id/bt_subit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Time"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginBottom="10dp"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="168dp"
-        android:layout_weight="0.69">
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="12dp"
-            android:textColor="@color/fontColor"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="Breakfast" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/textView8"
-            android:background="@color/fontColor"
-            android:layout_toLeftOf="@+id/gridView"
-            android:layout_toStartOf="@+id/gridView" />
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView8"
-            android:textColor="@color/fontColor"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="Lunch" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/textView9"
-            android:background="@color/fontColor"
-            android:layout_toLeftOf="@+id/gridView"
-            android:layout_toStartOf="@+id/gridView" />
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textColor="@color/fontColor"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:layout_marginRight="15dp"
-            android:layout_below="@+id/textView9"
-            android:text="Dinner"
-            android:layout_toLeftOf="@+id/gridView"
-            android:layout_toStartOf="@+id/gridView" />
-
-        <GridView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignTop="@+id/textView8"
-            android:layout_toEndOf="@+id/textView8"
-            android:layout_alignBottom="@+id/textView10"
-            android:id="@+id/gridView" />
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="5dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_summary_details"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.39"
-            android:background="@color/confirm"
-            android:textColor="@android:color/white"
-            android:text="Dinner" />
-
-        <TextView
-            android:id="@+id/tv_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:layout_weight="0.39"
-            android:textSize="18sp"
-            android:background="@color/dinner"
-            android:text="Confirm" />
-    </LinearLayout>
-</LinearLayout>
+        android:textAllCaps="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/payment_btn_color"
+        android:text="View Menu"
+        android:textSize="24sp"
+        android:layout_margin="5dp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
+</RelativeLayout>
